--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,38 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
+
+    <style>
+    .container {
+      margin-top: 1rem;
+      width: 70%;
+      max-width: 50rem;
+    }
+
+    .center-text{
+      text-align: center;
+    }
+
+    table td {
+      vertical-align: top;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
+    pre code {
+      background-color: #eee;
+      display: block;
+      padding: 5px;
+    }
+    </style>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class='bg-dark'>
+    <div class='container border rounded bg-white p-4'>
+      <%= yield %>
+    </div>
   </body>
 </html>
