--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,8 +21,9 @@
         <td>
           <b>response</b>
           <pre><code>
+            code: 'success',
+            message: 'success',
             data : {
-              code: 'success',
               token: jwt_token,
               exp: expired_time,
               user: { user },
@@ -46,11 +47,12 @@
         <td>
           <b>response</b>
           <pre><code>
+            code: 'success',
+            message: 'success',
             data : {
-              code: 'success',
               token: jwt_token,
               exp: expired_time,
-              user: { name: user.name },
+              user: { user },
             }
           </code></pre>
         </td>
@@ -72,8 +74,9 @@
         <td>
           <b>response</b>
           <pre><code>
+          code: 'success',
+          message: 'success',
           data : {
-            code: 'success',
             user: { user },
           }
           </code></pre>
@@ -96,8 +99,9 @@
         <td>
           <b>response</b>
           <pre><code>
+          code: 'success',
+          message: 'success',
           data : {
-            code: 'success',
             user: { user },
           }
           </code></pre>
